<resources>
    <string name="app_name">VIPVerify</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_button_scan">扫一扫</string>
    <string name="string_username">用户名</string>
    <string name="string_userpassword">密    码</string>
    <string name="string_login">登录</string>
    <string name="string_signin">注册</string>
    <string name="string_regist">登记</string>
    <string name="string_veriry">验证</string>
    <string name="string_autologin">自动登录</string>
    <string name="string_remember">记住密码</string>
    <string name="string_offline_mode">离线\n模式</string>
    <string name="string_mode">模式</string>
    <string name="string_carnumber">卡号</string>
    <string name="string_cardpassword">卡密码</string>
    <string name="string_carduser_phone">手机号码</string>
    <string name="string_carduser_sex">性别</string>
    <string name="string_carduser_call_name">某</string>
    <string name="string_cardusersex_men">男</string>
    <string name="string_cardusersex_women">女</string>
    <string name="string_carduser_passwordverify">复验密码</string>
    <string name="string_carduser_firstname">姓</string>
    <string name="string_sex_men">先生</string>
    <string name="string_sex_women">女士</string>
    <string name="string_textview_ipport">000.000.000.000 : 000</string>
    <string name="string_textnotify_verifysuc">验证正确</string>
    <string name="string_textnotify_registsuc">登记完成</string>
    <string name="string_textnotify_verifyfail">验证失败! 卡号不存在或密码错误  ！  </string>
    <string name="string_textnotify_registfail">不能登记，可能卡已经登记了</string>
    <string name="string_textnotify_recycle_suc">回收完成！！！！</string>
    <string name="string_textnotify_recycle_fail">回收失败！！！！</string>
    <string name="string_title_confirm">确认信息</string>
    <string name="string_info_confirm">信息确认</string>
    <string name="string_info_recycle">确认回收</string>
    <string name="string_menu_symbol">. . .</string>
    <string name="string_menu_searceserver">查找服务器</string>
    <string name="string_menu_setserver">配置服务器</string>
    <string name="string_menu_helpr">帮助</string>
    <string name="string_exit_notify">再按一次退出程序</string>
    <string name="string_search_server">搜索服务器</string>
    <string name="string_notify_select_server">必须选择服务器</string>
    <string name="string_notify_logining">正在登录中</string>
    <string name="string_default_ip">0.0.0.0</string>
    <string name="string_default_port">000</string>
    <string name="string_network_setting">网络设置</string>
    <string name="string_loginserver">登录服务器</string>
    <string name="string_network_kind">类型</string>
    <string name="string_id_addr">地址</string>
    <string name="string_port">端口</string>
    <string name="string_network_test">测试</string>
    <string name="string_domain">域</string>
    <string name="string_nouse_netproxy">不使用代理</string>
    <string name="string_http_proxy">http代理</string>
    <string name="string_socket_proxy">socket代理</string>
    <string name="string_browser_setting">使用浏览器设置</string>
    <string name="string_nouse_advanced_options">不使用高级选项</string>
    <string name="string_udp_of_kind">udp类型</string>
    <string name="string_tcp_of_kind">tcp类型</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_yes">是</string>
    <string name="string_no">否</string>
    <string name="string_send_identify_code">发送验证码</string>
    <string name="string_resend_identify_code">重发</string>
    <string name="string_identify_code">验证码</string>
    <string name="string_net_error">网络超时，请检查网络</string>
    <string name="string_sync_data">同步数据</string>
    <string name="string_sync_local_data_to_server">本地有数据，是否上传到服务器?</string>
    <string name="string_exit">退出</string>
    <string name="string_sure_loginout">确定要退出登录吗？</string>
    <string name="title_activity_veriry">VeriryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
</resources>