<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_searchserver"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:showAsAction="withText|ifRoom"
        android:title="@string/string_menu_searceserver">
    </item>
    <item
        android:id="@+id/main_menu_setserver"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        android:showAsAction="withText|ifRoom"
        android:title="@string/string_menu_setserver">
    </item>
    <item
        android:id="@+id/main_menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="2"
        android:showAsAction="withText"
        android:title="@string/string_menu_helpr">
    </item>

</menu>