<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00A0A0"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/relativeLayout_signin_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp" >

        <EditText
            android:id="@+id/editText_signin_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/string_username"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_signin_userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_signin_username"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/string_userpassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_signin_verify_userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_signin_userpassword"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/string_carduser_passwordverify"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_signin_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_signin_verify_userpassword"
            android:ems="10"
            android:hint="@string/string_carduser_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText_siginin_identify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_signin_phone"
            android:layout_alignStart="@+id/editText_signin_phone"
            android:layout_below="@+id/editText_signin_phone"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/button_signin_send_identify_code"
            android:layout_toStartOf="@+id/button_signin_send_identify_code"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/string_identify_code"
            android:inputType="numberSigned"
            android:textColor="#00A0FF" />

        <Button
            android:id="@+id/button_signin_send_identify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText_siginin_identify_code"
            android:layout_alignEnd="@+id/editText_signin_phone"
            android:layout_alignRight="@+id/editText_signin_phone"
            android:layout_alignTop="@+id/editText_siginin_identify_code"
            android:layout_below="@+id/editText_signin_phone"
            android:enabled="false"
            android:text="@string/string_send_identify_code"
            android:textColor="#00A0FF" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_signin_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout_signin_info_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/string_signin"
        android:textColor="#00A0FF" />

    <Button
        android:id="@+id/button_signin_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_signin_ok"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/string_cancel"
        android:textColor="#00A0FF" />

</RelativeLayout>