<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/view_background_color"
    android:gravity="top"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/button_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" 
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:gravity="top"
        android:visibility="invisible"
        android:text="@string/string_menu_symbol" />

    <RelativeLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/string_username"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_login_userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_login_username"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/string_userpassword"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/textView_ipport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_login_userpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:text="@string/string_textview_ipport"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout_login"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_login"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/string_login"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/button_signin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/string_signin"
            android:textColor="@color/button_text_color" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_signin" >

            <CheckBox
                android:id="@+id/checkBox_main_autologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/button_text_color"
                android:text="@string/string_autologin"
                android:textColor="#00A0FF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/checkBox_main_remember"
                android:layout_toLeftOf="@+id/checkBox_main_remember"
                android:layout_toRightOf="@+id/checkBox_main_autologin"
                android:layout_toStartOf="@+id/checkBox_main_remember"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textbutton_offline"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/string_offline_mode"
                    android:textColor="@drawable/textselector" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_main_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
               android:background="@color/button_text_color"
                android:text="@string/string_remember"
                android:textColor="#00A0FF" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>