<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:background="#00A0A0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible" >

    <EditText
        android:id="@+id/edit_carduser_passwordverify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:hint="@string/string_carduser_passwordverify"
        android:inputType="textPassword" 
         android:textColorHint="@color/red">

        <requestFocus android:layout_height="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/edit_carduser_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_carduser_passwordverify"
        android:layout_alignLeft="@+id/edit_carduser_passwordverify"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edit_carduser_passwordverify"
        android:layout_alignStart="@+id/edit_carduser_passwordverify"
        android:layout_below="@+id/edit_carduser_passwordverify"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
         android:textColorHint="@color/red"
        android:hint="@string/string_carduser_firstname"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/radio_linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_carduser_passwordverify"
        android:layout_alignLeft="@+id/edit_carduser_passwordverify"
        android:layout_alignRight="@+id/edit_carduser_passwordverify"
        android:layout_alignStart="@+id/edit_carduser_passwordverify"
        android:layout_below="@+id/edit_carduser_firstname"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_sex_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cardusersex_men" 
            android:textColor="@color/red"
            />

        <RadioButton
            android:id="@+id/radio_sex_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft = "10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:text="@string/string_cardusersex_women" />
    </LinearLayout>
    <TextView
        android:id="@+id/textview_call_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/edit_carduser_passwordverify"
        android:layout_alignLeft="@+id/edit_carduser_passwordverify"
        android:layout_alignRight="@+id/edit_carduser_passwordverify"
        android:layout_alignStart="@+id/edit_carduser_passwordverify"
        android:layout_below="@+id/radio_linerlayout"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/string_carduser_call_name"
        android:textColor="#AFAFAF" />

    <EditText
        android:id="@+id/edit_carduser_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_carduser_passwordverify"
        android:layout_alignLeft="@+id/edit_carduser_passwordverify"
        android:layout_alignRight="@+id/edit_carduser_passwordverify"
        android:layout_alignStart="@+id/edit_carduser_passwordverify"
        android:layout_below="@+id/textview_call_name"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        
        android:hint="@string/string_carduser_phone"
        android:inputType="phone" />

</RelativeLayout>